# tutorial

./: .gitignore  A_star.py  README.md
ROS2/: chapter1_ROS2配置.md  chapter2_工作空间.md  chapter3_话题.md  chapter4_launch启动工具.md  chapter5_服务.md  chapter6_自定义库文件.md
ch2-C++/: README.md
ch2-C++/1/: genshin.cpp
ch2-C++/2/src/: genshin.cpp  main.cpp
ch3-OpenCV/: README.md
ch3-OpenCV/1/src/: DisplayImage.cpp
chapter1-Linux基础/: README.md
chapter2-C++/section2/include/: genshin.h
chapter2-C++/section4/: CMakeLists.txt
chapter2-C++/section5/: main.cpp
chapter3-OpenCV/: README.md
chapter3-OpenCV/section0/: CMakeLists.txt
chapter3-OpenCV/section1/: CMakeLists.txt  README.md
chapter3-OpenCV/section1/src/: draw.cpp  image.cpp  video.cpp
chapter3-OpenCV/section2/: CMakeLists.txt  README.md
chapter3-OpenCV/section3/: CMakeLists.txt  README.md
chapter3-OpenCV/section4/: CMakeLists.txt  README.md
chapter3-OpenCV/section4/.cache/clangd/index/: armor.hpp.E8D1B885265C8E8D.idx  detector.cpp.D6B52C40DC106A8E.idx  detector.hpp.5C5CEF845F867D50.idx  main.cpp.E3B51FB39DAF1C8E.idx  main.hpp.7671CDE009950DE0.idx  number_classifier.cpp.67DAE76101E12DD2.idx  number_classifier.hpp.5936C9D647C07FF7.idx
chapter3-OpenCV/section4/config/: detect_params.yaml
chapter3-OpenCV/section4/include/: armor.hpp  detector.hpp  main.hpp  number_classifier.hpp
chapter3-OpenCV/section4/src/: detector.cpp  main.cpp  number_classifier.cpp
chapter4-机器人运动学入门/: README.md
chapter5-相机模型/: README.md
卷积神经网络/: 卷积神经网络.md
坐标变换/: cnt_rotation.py
环境配置/: env-setting.md
(+4 files in other folders)
